      containers.
    - Fix a race condition at boot with serio devices. (LP #1014460)
    - Create disk/by-partlabel links for mmcblk partitions.
    - Hack to support system-image read-only /etc, and modify files in
      /etc/writable/ instead.
    - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
      upgrades, and we already have the automatic per-file symlinking.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 22:13:02 +0200

systemd (204-11) UNRELEASED; urgency=medium

  [ Martin Pitt ]
  * Explain patch management in debian/README.source. (Closes: #739113)
  * Replace "Always probe cpu support drivers" patch with cherry-picked
    upstream fix which is more general.
  * Advertise hibernation only if there's enough free swap. Patches backported
    from current upstream. (LP: #1313522)
  * Fix typo in sg loading rule to make it actually work.

  [ Michael Biebl ]
  * Make no-patch-numbers the default for gbp-pq.

  [ Michael Stapelberg ]
  * Clarify that “systemd” does not influence init whereas “systemd-sysv” does
    (Closes: #747741)

 -- Martin Pitt <mpitt@debian.org>  Sun, 27 Apr 2014 12:51:55 +0200

systemd (204-10) unstable; urgency=medium

  * In the udeb's udev.startup, make sure that /dev/pts exists.
  * systemd-logind-launch: Set the #files ulimit, for unprivileged LXC
    containers.
  * Drop udev.NEWS, it only applies to pre-squeeze.
  * Remove /var/log/udev on purge.
  * Always probe cpu support drivers. (LP #1207705)
  * On Dell PowerEdge systems, the iDRAC7 and later support a USB Virtual NIC
    for management. Name this interface "idrac" to avoid confusion with "real"
    network interfaces.
  * Drop numerical prefixes from patches, to avoid future diff noise when
    removing, cherry-picking, and merging patches. From now on, always use
    "gbp-pq export --no-patch-numbers" to update them.

 -- Martin Pitt <mpitt@debian.org>  Sun, 27 Apr 2014 11:53:52 +0200

systemd (204-9) unstable; urgency=medium
