@@ -16,6 +16,7 @@ systemd (204-10ubuntu1) UNRELEASED; urgency=medium
       /etc/writable/ instead.
     - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
       upgrades, and we already have the automatic per-file symlinking.
+    - debian/rules: Add an epoch to libgudev.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 22:13:02 +0200
 
